--- a/views/media.pug
+++ b/views/media.pug
@@ -13,6 +13,10 @@ block content
             background-color: black !important;
         }
 
+        .navbar {
+            background-color: black !important;
+        }
+
 
         .navbar li a {
             color: rgb(95 95 95) !important;
