--- a/views/media.pug
+++ b/views/media.pug
@@ -14,12 +14,13 @@ block content
         }
 
         .navbar {
-            background-color: black !important;
+            background-color: #0c0c0c !important;
         }
 
 
         .navbar li a {
             color: rgb(95 95 95) !important;
+            /*font-weight: 400 !important;*/
         }
 
         .brandName {
