--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -338,6 +338,7 @@ style.
 
     .navbar-default .navbar-nav > li > a {
         font-size: 16px;
+        /*font-weight:400;*/
     }
 
     .brandName {
