--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -107,6 +107,14 @@ script.
 
   });
 
+  players[0].on('play', function (event) {
+
+    // $('.plyr').focus()
+    // add max height
+    // $('.plyr').css('cursor', 'none')
+
+  });
+
   players[0].on('exitfullscreen', function (event) {
     // add max height
       $('.plyr').css('max-height', savedMaxHeight)
