--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -34,7 +34,7 @@ style.
 
     .upload-title-text {
         max-height: 53px;
-        color: black;
+        color: #b0aeae;
         font-size: 20px;
         text-align: center;
         margin: 0;
@@ -279,7 +279,7 @@ style.
 
     .image-container {
         display:inline-block;
-        border:1px solid white;
+        border:1px solid #5b5a5a;
         margin:0 auto;
         overflow:hidden;
         border-radius:13px;
@@ -330,7 +330,7 @@ style.
     }
 
     .container {
-        max-width: 80%;
+
     }
 
     @media (min-width: 900px) {
@@ -361,5 +361,9 @@ style.
     }
 
     .display-element {
-        border: 1px solid white;
+        border: 1px solid #5b5a5a;;
+    }
+
+    .editFileButtons {
+        margin-top: 30px;
     }
