--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -157,6 +157,7 @@ block content
                 li(role='presentation')
                     a(href=`/user/${channelUrl}/?mediaType=image&orderBy=${orderBy}&page=${page}`) Images
 
+
         include ../viewPartials/sensitivityFilterDropdown
 
 
@@ -171,9 +172,9 @@ block content
 
     div.container
         each upload in channel.uploads
-            div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:330px;margin-top:30px;")
+            div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:330px;margin-top:50px;")
                 if isUser || isAdmin || ( user && user.role == 'moderator' )
-                    div.editFileButtons
+                    div.editFileButtons(style="")
                         form.editLink(action="/api/upload/delete" method="POST" style="display:inline-block")
                             input(type='hidden', name='_csrf', value=_csrf)
                             input(type='hidden', name='videoId', value=upload.uniqueTag)
