--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -30,32 +30,33 @@ div.underThing
 // UPLOAD TITLE
 a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" target="_parent")
     div
-        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;color:gray;margin-top:0px;") #{upload.title} &nbsp
+        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;margin-top:0px;") #{upload.title} &nbsp
 
 // shows view amount, username and if recent also time ago
+// TODO: need to rename this div
 div.random-thing(style="margin-top:-4px;")
     // view amount
-    p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;color:gray;") #{upload.legitViewAmount} views &nbsp
+    p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;color:#b0aeae;") #{upload.legitViewAmount} views &nbsp
         // upload time ago
 
         // if its not sorted by popular (aka recent or other thing on user page)
         if !within
             p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;")
-                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;color:gray;" target="_parent") #{upload.uploader.channelName || upload.uploader.channelUrl}
+                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;color:#b0aeae;" target="_parent") #{upload.uploader.channelName || upload.uploader.channelUrl}
 
-            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;color:gray;") &nbsp uploaded #{upload.timeAgo} &nbsp
+            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;color:#b0aeae;;") &nbsp uploaded #{upload.timeAgo} &nbsp
 
             // if sorted by popular
         else
             // username
             p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp
-                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;color:gray;" target="_parent") #{upload.uploader.channelName || upload.uploader.channelUrl}
+                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;color:#b0aeae;" target="_parent") #{upload.uploader.channelName || upload.uploader.channelUrl}
 
 
 // show views within time if on popular page
 div.upload-thing
     if within
-        p.upload-title-text.views-text(style="margin-top:-8px;color:gray;") #{upload[popularTimeViews]} #{withinDisplayString}
+        p.upload-title-text.views-text(style="margin-top:-8px;color:#b0aeae;;") #{upload[popularTimeViews]} #{withinDisplayString}
 
 
 
