--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -306,9 +306,6 @@ style.
     }
 
     @media (max-width: 767px) {
-        .plyr {
-            max-height: 40vh !important
-        }
 
         .holder {
             overflow: visible;
@@ -320,11 +317,13 @@ style.
     .plyr.plyr--video {
         resize: both;
 
-        max-width: 97.5vw;
-        max-height: 98vh;
+        /*0.2*/
+        /*max-width: 97.5vw;*/
+        /*max-height: 98vh;*/
 
-        height: 82vh;
+        /*height: 82vh;*/
 
+        /* 0.1 */
         /*width: 1409px;*/
         /*height: 799px;*/
     }
