touchup for desktop

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -317,6 +317,8 @@ style.
     .plyr.plyr--video {
         resize: both;
 
+        max-height: 625px;
+
         /*0.2*/
         /*max-width: 97.5vw;*/
         /*max-height: 98vh;*/
