--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -315,9 +315,7 @@ style.
 
 
     .plyr.plyr--video {
-        resize: both;
-
-        max-height: 625px;
+        /*resize: both;*/
 
         /*0.2*/
         /*max-width: 97.5vw;*/
@@ -362,7 +360,9 @@ style.
     }
 
     .display-element {
-        border: 1px solid #5b5a5a;;
+        border: 1px solid #5b5a5a;
+        max-height: 625px;
+        resize: both;
     }
 
     .editFileButtons {
