switching over header

--- a/views/media.pug
+++ b/views/media.pug
@@ -9,7 +9,7 @@ block content
             margin-top: 30px;
         }
 
-        body footer header {
+        body footer {
             background-color: black !important;
         }
 
