--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -11,6 +11,7 @@ block content
                 input(type='hidden', name='_csrf', value=_csrf )
                 input.search-query-input.form-control(style="margin: 0 auto;width:400px;max-width:100%" type='search', name='search', id='search' placeholder=`${searchQuery !== 'undefined' ? searchQuery: ''}`)
                 br
+                // NOTE this does not work by sending a post, rather see the JS it only sends a GET request
                 div.search-upload-buttons-container
                     button.fw.search-uploads-button.btn-lg.btn.btn-primary(type='submit' name="type" value="upload")
                         //i.fa.fa-lock
