--- a/views/layout.pug
+++ b/views/layout.pug
@@ -67,6 +67,8 @@ html
     include viewPartials/darkLightMode
 
     .container(style="max-width:100%;padding-left: 0px; padding-right: 0px;")
+      include layoutPartials/sidebar
+
       include layoutPartials/flash
       block content
 
@@ -82,6 +84,41 @@ html
     script(src='/js/main.js')
 
     block extra_footer_js
+
+      script.
+        var accountOpen = false;
+
+        function toggleAccount() {
+          // account closed, open div
+          if (!accountOpen) {
+            document.getElementById("accountDropdown").style.display = "";
+            accountOpen = true;
+
+            // account open, close div
+          } else if (accountOpen) {
+            document.getElementById("accountDropdown").style.display = "none";
+
+            accountOpen = false;
+          }
+        }
+
+
+      script.
+          var sidebarClosed = true;
+
+        function toggleNav() {
+          if (sidebarClosed) {
+            document.getElementById("mySidebar").style.width = "253px";
+            document.getElementById("main").style.marginLeft = "253px";
+
+            sidebarClosed = false;
+          } else if (!sidebarClosed) {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginLeft = "0";
+
+            sidebarClosed = true;
+          }
+        }
 
     //script.
     //  $.magneticScroll({
