--- a/views/layoutPartials/sidebar.pug
+++ b/views/layoutPartials/sidebar.pug
@@ -77,36 +77,12 @@ style.
     }
 
     /* The sidebar menu */
-    .permBar {
-        height: 100%; /* Full-height: remove this if you want "auto" height */
-        width: 160px; /* Set the width of the sidebar */
-        position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-        z-index: 1; /* Stay on top */
-        top: 0; /* Stay at the top */
-        left: 0;
-        background-color: white; /* Black */
-        overflow-x: hidden; /* Disable horizontal scroll */
-        padding-top: 20px;
-    }
-
-    /* The navigation menu links */
-    .permBar a {
-        padding: 6px 8px 6px 0px;
-        text-decoration: none;
-        font-size: 11px;
-        color: black;
-        display: block;
-        width: 110px;
-
-    }
-
-    /* The sidebar menu */
     .accountDropdown {
         height: 366px; /* Full-height: remove this if you want "auto" height */
         width: 208px; /* Set the width of the sidebar */
         position: fixed; /* Fixed Sidebar (stay in place on scroll) */
         top: 64px; /* Stay at the top */
-        right: 93px;
+        right: 6px;
         background-color: white; /* Black */
         text-align: left;
         border: 1px solid #cec0c0;
@@ -219,28 +195,6 @@ style.
         border-radius: 50%;
     }
 
-.permBar(style="margin-top:50px;overflow:hidden;width:103px;background-color:#efefef")
-    a(href='/news')
-        img(src="/news.png" style="width:48px;display:inline-block;margin-top:20px;")
-        p News
-
-    a(href='/youtube')
-        img(src="/youtube-old.png" style="width:74px;display:inline-block;margin-top:-13px;")
-        p YouTube
-
-    //a(href='/instagram')
-    //    img(src="/instagram.png" style="width:54px;display:inline-block;")
-    //    p Instagram
-
-    a(href='/reddit')
-        img(src="/reddit-blank.svg" style="width:43px;display:inline-block;")
-        p Reddit
-
-    a(href='/twitter')
-        img(src="/twitter-logo.png" style="width:58px;display:inline-block;")
-        p Twitter
-
-
 
 #mySidebar.sidebar(style="text-align:left;margin-left:-2px;overflow-y: hidden;")
     a(href='#' style="margin-top:38px;color:#007bff;") Upgrade
@@ -276,7 +230,7 @@ style.
         if user
             img(src=user.gravatar() style="width: 34px;display:inline-block;margin-left:15px;border-radius:15px;position: absolute;top: 15px;right: 149px;")
             p(style="font-size: 13px;position: absolute;left:65px;top: 15px;") #{user.displayName}
-            p(style="font-size: 12px;position: absolute;top: 32px;color: grey;left:63px;") #{user.email}
+            p(style="font-size: 12px;position: absolute;top: 32px;color: grey;left:63px;") #{user.channelName}
         a(href="#" style="color:#007bff")
             h7(style="position: absolute;top: 60px;right: 132px;font-size: 13px;") Upgrade
     div(style="padding-top:57px")
